[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8", "packaging==23.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zoo-gym"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "LLM Trainer"
readme = "README.md"
requires-python = ">=3.10"
# license = "Apache-2.0"

[project.scripts]
gym = "gym.cli.main:main"

[project.urls]
Homepage = "https://zoo.dev"
Documentation = "https://docs.zoo.dev"
Repository = "https://github.com/zoo-labs/gym.git"

[tool.setuptools_scm]

[tool.setuptools]
py-modules = ["setuptools_gym_dynamic_dependencies"]
include-package-data = true

[tool.setuptools.cmdclass]
build_py = "setuptools_gym_dynamic_dependencies.BuildPyCommand"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B", "I"]
ignore = [
    "E203",  # Whitespace before ':'
    "E501",  # Line too long
    "C901",  # Too complex
    "B019",  # Use of functools.cache on methods
    "E722",  # Bare except
    "F821",  # Undefined name (for dynamic exec)
]

[tool.ruff.lint.isort]
known-third-party = ["wandb", "comet_ml"]
known-local-folder = ["src", "tests"]
# Black-compatible isort settings
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
# Use black's formatting style exactly
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
